--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,26 @@
 {
   "name": "Ripple Balance",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
-  "description": "Check your xrp balance in browser",
-  "homepage_url": "http://github.com",
+  "description": "Check Your Ripple Account Balance In Your Browser",
+  "homepage_url": "https://github.com/N3TC4T/ripple-balance",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/icon16-grey.png",
+    "48": "icons/icon48-grey.png",
+    "128": "icons/icon128-grey.png"
   },
   "options_page": "src/options_custom/index.html",
   "browser_action": {
-    "default_icon": "icons/icon19.png",
+    "default_icon": "icons/icon19-grey.png",
     "default_title": "Show Balance",
     "default_popup": "src/browser_action/browser_action.html"
   },
+  "background": {
+    "scripts": ["js/background.js", "js/ripple.js"]
+  },
   "permissions": [
     "storage",
+    "notifications",
     "https://data.ripple.com/*"
   ]
 }
